--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 	<body style="margin: 0; padding: 0;">
 
-	 <table border="1" cellpadding="0" cellspacing="0" width="100%">
+	 <table border="0" cellpadding="0" cellspacing="0" width="100%";>
 	  <tr>
 	   <td>
-		    <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
+		    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
 
 <!--HEADER-->
 
@@ -25,7 +25,7 @@
 
 			 <tr>
 			  <td bgcolor="#7D9FA8" style="padding: 40px 30px 40px 30px;">
-				 <table border="1" cellpadding="0" cellspacing="0" width="100%">
+				 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 				  
 				  <tr>
 				   <td style="padding: 10px 0 10px 0; color: #ffffff; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
@@ -49,11 +49,11 @@
 
 				  <tr>
 				   <td>
-				    <table border="1" cellpadding="0" cellspacing="0" width="100%">
+				    <table border="0" cellpadding="0" cellspacing="0" width="100%">
 					 <tr>
 					 	
 					  <td width="170" valign="top">
-					   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+					   <table border="0" cellpadding="0" cellspacing="0" width="100%">
 					    <tr>
 					     <td>
 					      <img src="images/IconStay.png" alt="" width="100%" height="120" style="display: block; padding: 10px 0px 10px 0px; " />
@@ -74,7 +74,7 @@
 					  </td>
 
 					  <td width="170" valign="top">
-					   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+					   <table border="0" cellpadding="0" cellspacing="0" width="100%">
 					    <tr>
 					     <td>
 					      <img src="images/IconLogo.png" alt="" width="80%" height="140" style="display: block; padding: 0px 0px 0px 15px" />
@@ -95,7 +95,7 @@
 					  </td>
 
 					  <td width="170" valign="top">
-					   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+					   <table border="0" cellpadding="0" cellspacing="0" width="100%">
 					    <tr>
 					     <td>
 					      <img src="images/IconWeb.png" alt="" width="100%" height="120" style="display: block; padding: 10px 0px 10px 0px;" />
@@ -132,7 +132,7 @@
 				   <td style="padding: 10px 0 10px 0; color: #ffffff; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
 				    Adopting an out-of-the-box approach, we consistently push the boundaries of design to create memorable, head-turning, and inspiring designs that will allow you to communicate effectively with your customers.
 				    <br><br>
-					The Team at Walk In The Park Creative
+					<b>The Team at Walk In The Park Creative</b>
 				   </td>
 				  </tr>
 
@@ -145,7 +145,7 @@
 			 <tr>
 			  <td bgcolor="#2B2B2D" style="padding: 30px 30px 30px 30px">
 
-			   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+			   <table border="0" cellpadding="0" cellspacing="0" width="100%">
 				 <tr>
 
 				  <td width="75%" style="padding: 10px 0 10px 0; color: #F39205; font-family: Arial, sans-serif; font-size: 14px; line-height: 20px;">
@@ -157,20 +157,14 @@
 					 <table border="0" cellpadding="0" cellspacing="0">
 					  <tr>
 					   <td>
-					    <a href="http://www.facebook.com/">
-					     <img src="images/Facebook.gif" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
+					    <a href="https://www.facebook.com/walkintheparkcreative">
+					     <img src="images/fb.png" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
 					    </a>
 					   </td>
-					   <td style="font-size: 0; line-height: 0;" width="20">&nbsp;</td>
+					   <td style="font-size: 0; line-height: 0;" width="10">&nbsp;</td>
 					   <td>
-					    <a href="http://www.twitter.com/">
-					     <img src="images/fb.gif" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
-					    </a>
-					   </td>
-					   <td style="font-size: 0; line-height: 0;" width="20">&nbsp;</td>
-					   <td>
-					    <a href="http://www.twitter.com/">
-					     <img src="images/.gif" alt="Facebook" width="38" height="38" style="display: block;" border="0" />
+					    <a href="https://twitter.com/walkparkcreate">
+					     <img src="images/twitter.png" alt="Twitter" width="38" height="38" style="display: block;" border="0" />
 					    </a>
 					   </td>
 					  </tr>
@@ -182,8 +176,6 @@
 
 			  </td>
 			 </tr>
-
-
 
 			</table>
 	   </td>
